# trainite-prototype

./: .gitignore  README.md  config.yaml  main.py  pdf_content.txt  pdf_content_utf8.txt  progress.md  pyproject.toml  read_pdf.py  requirements.txt  train.py  trainite_prototype.ipynb
configs/: config.yaml
datasets/: str_rev_dataset.py
models/: lang_model.py
trainite/: __init__.py  cli.py  train.py
trainite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
trainite/configs/: config.yaml
trainite/datasets/: __init__.py  registry.py  string_reverse.py
trainite/models/: __init__.py  gru.py  lstm.py  registry.py  transformer.py
trainite/plugins/: datasets.json
trainite/trainers/: ignite_trainer.py
trainite/utils/: dataset_loader.py  experiment.py  experiment_viewer.py  inference.py  scaffold.py
